changed routing extension logic to be deterministic
